# libfoo

./: .clang-format  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ccpp.yml
docs/: api.md  foo_new.md  index.md  index.rst
include/foo/: foo.h
src/: foo.c  foo_priv.h
